fixed images not showing on homepage on mobile view

--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -3061,7 +3061,8 @@ body.home #hero-caption.elementor-section {
     padding: 10px!important;
   }
   .elementor-199118 .elementor-element.elementor-element-3a02fce {
-    margin-bottom: 40px;
+    // margin-bottom: 40px;
+    margin-bottom: 0;
   }
   #ThingsToDo_Second .elementor-widget-container {
     min-height: 300px;
